[package]
name = "word_vec-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borrowme = "*"
nalgebra = "*"
serde = { version = "*", optional =true, features = ["derive"] }
priority_container = { git = "https://github.com/JojiiOfficial/PrioContainer"}
order_struct = { git = "https://github.com/JojiiOfficial/OrderStruct" }

[features]
default = ["serde"]
