[package]
name = "word_vec-rs"
description = " Memory efficient library to work with word2vec vectors"
authors = ["jojii <jojii@gmx.net>"]
license = "AGPL-3.0-or-later"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borrowme = "0.0.14"
nalgebra = "0.32"
serde = { version = "1.0", optional =true, features = ["derive"] }
priority_container = "0.1"
order_struct = "0.1"
ahash = { version = "0.8", features = ["serde"] }

[features]
default = ["serde"]

[profile.release]
lto = 'fat'
